feature(search):implement search functionality
[Delivers #168948508]
